test/classes/errors/nilability-assign/assign-nonnil-shared-from-nonnil-owned.good
assign-nonnil-shared-from-nonnil-owned.chpl:9: error: cannot assign 'owned MyClass' to a 'shared MyClass'
